--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Akshat B Gupta</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-<!--<script src="script.js"></script>-->
-</body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <nav>
+      <div class="nav">
+        <div class="Home">
+          <a href="#">Home</a>
+        </div>
+        <div class="About">
+          <a href="#">About</a>
+        </div>
+        <div class="Project">
+          <a href="#">Projet</a>
+        </div>
+        <div class="Contact">
+          <a href="#">Contact</a>
+        </div>
+      </div>
+    </nav>
+    &dollar;
+    Elon Musk
+    <input type="number" name="volume" min="0" max="100">
+    <audio controls>
+      <source src="demo.mp3" type="audio/mp3" />
+      Your browser does not support the audio element.
+    </audio>
+<label for="name">Name:</label> <input type="text" id="name" name="name">
+
+
+    Akshat
+    <!--<script src="script.js"></script>-->
+  </body>
 </html>
