--- a/index.html
+++ b/index.html
@@ -8,30 +8,29 @@
   </head>
   <body>
     <nav>
-      <div class="nav">
-        <div class="Home">
-          <a href="#">Home</a>
-        </div>
-        <div class="About">
-          <a href="#">About</a>
-        </div>
-        <div class="Project">
-          <a href="#">Projet</a>
-        </div>
-        <div class="Contact">
-          <a href="#">Contact</a>
-        </div>
+      <div class="Home">
+        <a href="#">Home</a>
+      </div>
+      <div class="About">
+        <a href="#">About</a>
+      </div>
+      <div class="Project">
+        <a href="#">Projet</a>
+      </div>
+      <div class="Contact">
+        <a href="#">Contact</a>
       </div>
     </nav>
-    <input type="number" name="volume" min="0" max="100">
-    <audio controls>
-      <source src="demo.mp3" type="audio/mp3" />
-      Your browser does not support the audio element.
-    </audio>
-<label for="name">Name:</label> <input type="text" id="name" name="name">
-
-
-    Akshat
+    <input type="number" name="volume" min="0" max="100" />
+    <audio src="demo.mp3" controls></audio>
+    <label for="name"></label
+    ><input placeholder="Username" id="name" name="name" />
+    <label for="name"></label
+    ><input placeholder="Email" id="name" name="name" />
+    <label for="name"></label
+    ><input placeholder="Password" id="name" name="name" />
+    <label for="name"></label
+    ><input placeholder="Confirm Password" id="name" name="name" />
     <script src="script.js"></script>
   </body>
 </html>
