--- a/index.html
+++ b/index.html
@@ -23,14 +23,12 @@
     </nav>
     <input type="number" name="volume" min="0" max="100" />
     <audio src="demo.mp3" controls></audio>
-    <label for="name"></label
-    ><input placeholder="Username" id="name" name="name" />
-    <label for="name"></label
-    ><input placeholder="Email" id="name" name="name" />
-    <label for="name"></label
-    ><input placeholder="Password" id="name" name="name" />
-    <label for="name"></label
-    ><input placeholder="Confirm Password" id="name" name="name" />
+    <label for="name"></label>
+    <input placeholder="Username" id="name" name="name"/>
+    <label for="name"></label>
+    <input placeholder="Email" id="name" name="name"/>
+    <label for="name"></label>
+    <input placeholder="Password" id="name" name="name"/>
     <script src="script.js"></script>
   </body>
 </html>
