--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- Navigation Bar -->
     <nav>
       <div class="Home">
         <a href="#">Home</a>
@@ -15,20 +16,38 @@
         <a href="#">About</a>
       </div>
       <div class="Project">
-        <a href="#">Projet</a>
+        <a href="#">Projects</a>
       </div>
       <div class="Contact">
         <a href="#">Contact</a>
       </div>
     </nav>
-    <input type="number" name="volume" min="0" max="100" />
-    <audio src="demo.mp3" controls></audio>
-    <label for="name"></label>
-    <input placeholder="Username" id="name" name="name"/>
-    <label for="name"></label>
-    <input placeholder="Email" id="name" name="name"/>
-    <label for="name"></label>
-    <input placeholder="Password" id="name" name="name"/>
+
+    <!-- Main Container -->
+    <div class="container">
+      <h1>Welcome to Akshat B Gupta's Page</h1>
+      <p>Explore the projects and get in touch with me!</p>
+
+      <!-- Volume Control -->
+      <label for="volume">Set Volume</label>
+      <input type="number" name="volume" id="volume" min="0" max="100" />
+
+      <!-- Audio Player -->
+      <audio src="demo.mp3" controls></audio>
+
+      <!-- User Form -->
+      <form>
+        <label for="username">Username</label>
+        <input type="text" id="username" name="username" placeholder="Enter your username" />
+
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" placeholder="Enter your email" />
+
+        <label for="password">Password</label>
+        <input type="password" id="password" name="password" placeholder="Enter your password" />
+      </form>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
